# luvk-imgui-template

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-build.yml
Source/: CMakeLists.txt
Source/CMake/: CMakeLists.txt  FetchGLM.cmake  FetchImGUI.cmake  FetchSDL.cmake
Source/Core/: CMakeLists.txt
Source/Core/include/Core/Application/: Application.hpp  ApplicationBase.hpp
Source/Core/include/Core/Components/: InputManager.hpp
Source/Core/include/Core/Meshes/: ImGuiMesh.hpp
Source/Core/include/Core/UserInterface/: ImGuiLayer.hpp  ImGuiLayerBase.hpp
Source/Core/include/Core/UserInterface/Backend/: ImGuiBackendSDL.hpp  ImGuiBackendVulkan.hpp
Source/Core/src/Application/: Application.cpp  ApplicationBase.cpp
Source/Core/src/Components/: InputManager.cpp
Source/Core/src/Meshes/: ImGuiMesh.cpp
Source/Core/src/UserInterface/: ImGuiLayer.cpp  ImGuiLayerBase.cpp
Source/Core/src/UserInterface/Backend/: ImGuiBackendSDL.cpp  ImGuiBackendVulkan.cpp
Source/Main/: CMakeLists.txt  Main.cpp
Source/UserInterface/: CMakeLists.txt
Source/UserInterface/include/UserInterface/: Module.hpp
Source/UserInterface/include/UserInterface/Application/: Application.hpp
Source/UserInterface/include/UserInterface/Layers/: AppUI.hpp  ImGuiLayer.hpp  Overlay.hpp
Source/UserInterface/include/UserInterface/Libraries/: AnimationUI.hpp  ButtonUI.hpp  ControlUI.hpp  DataUI.hpp  EffectUI.hpp  LayoutUI.hpp  ThemeUI.hpp  WindowUI.hpp
Source/UserInterface/src/Application/: Application.cpp
Source/UserInterface/src/Layers/: AppUI.cpp  ImGuiLayer.cpp  Overlay.cpp
Source/UserInterface/src/Libraries/: AnimationUI.cpp  ButtonUI.cpp  ControlUI.cpp  DataUI.cpp  EffectUI.cpp  LayoutUI.cpp  ThemeUI.cpp  WindowUI.cpp
