# Author: Lucas Vilas-Boas
# Year: 2025
# Repo: https://github.com/lucoiso/luvk-imgui-template

# SDL3 Options
SET(SDL_SHARED ON CACHE BOOL "" FORCE)
SET(SDL_STATIC OFF CACHE BOOL "" FORCE)
SET(SDL_TESTS OFF CACHE BOOL "" FORCE)
SET(SDL_EXAMPLES OFF CACHE BOOL "" FORCE)
SET(SDL_DISABLE_INSTALL OFF CACHE BOOL "" FORCE)
SET(SDL_DISABLE_INSTALL_DOCS OFF CACHE BOOL "" FORCE)
SET(SDL_INSTALL_TESTS OFF CACHE BOOL "" FORCE)

SET(SDL_VIDEO ON CACHE BOOL "" FORCE)
SET(SDL_VULKAN ON CACHE BOOL "" FORCE)
SET(SDL_DIRECTX OFF CACHE BOOL "" FORCE)
SET(SDL_OPENGLES OFF CACHE BOOL "" FORCE)

SET(SDL_AUDIO OFF CACHE BOOL "" FORCE)
SET(SDL_GPU OFF CACHE BOOL "" FORCE)
SET(SDL_RENDER OFF CACHE BOOL "" FORCE)
SET(SDL_CAMERA OFF CACHE BOOL "" FORCE)
SET(SDL_JOYSTICK OFF CACHE BOOL "" FORCE)
SET(SDL_HAPTIC OFF CACHE BOOL "" FORCE)
SET(SDL_HIDAPI OFF CACHE BOOL "" FORCE)
SET(SDL_POWER OFF CACHE BOOL "" FORCE)
SET(SDL_SENSOR OFF CACHE BOOL "" FORCE)
SET(SDL_DIALOG OFF CACHE BOOL "" FORCE)


# GLM Options
SET(GLM_BUILD_TESTS OFF CACHE BOOL "" FORCE)
SET(GLM_BUILD_INSTALL OFF CACHE BOOL "" FORCE)
SET(GLM_BUILD_LIBRARY OFF CACHE BOOL "" FORCE)
SET(GLM_ENABLE_CXX_17 OFF CACHE BOOL "" FORCE)
SET(GLM_ENABLE_CXX_20 ON CACHE BOOL "" FORCE)
SET(GLM_ENABLE_SIMD_SSE2 ON CACHE BOOL "" FORCE)
SET(GLM_ENABLE_SIMD_SSE3 ON CACHE BOOL "" FORCE)
SET(GLM_ENABLE_SIMD_SSSE3 ON CACHE BOOL "" FORCE)
SET(GLM_ENABLE_SIMD_SSE4_1 ON CACHE BOOL "" FORCE)
SET(GLM_ENABLE_SIMD_SSE4_2 ON CACHE BOOL "" FORCE)
SET(GLM_ENABLE_SIMD_AVX ON CACHE BOOL "" FORCE)
SET(GLM_ENABLE_SIMD_AVX2 ON CACHE BOOL "" FORCE)
SET(GLM_ENABLE_SIMD_NEON ON CACHE BOOL "" FORCE)
SET(GLM_FORCE_PURE OFF CACHE BOOL "" FORCE)


# Fetch Contents
INCLUDE(FetchContent)

FETCHCONTENT_DECLARE(sdl3
                     GIT_REPOSITORY https://github.com/libsdl-org/SDL.git
                     GIT_TAG release-3.2.28
)

FETCHCONTENT_DECLARE(glm
                     GIT_REPOSITORY https://github.com/g-truc/glm.git
                     GIT_TAG 1.0.2
)

FETCHCONTENT_DECLARE(imgui
                     GIT_REPOSITORY https://github.com/ocornut/imgui.git
                     GIT_TAG v1.92.5-docking
)

FETCHCONTENT_MAKEAVAILABLE(sdl3)
FETCHCONTENT_MAKEAVAILABLE(glm)
FETCHCONTENT_MAKEAVAILABLE(imgui)


# Sub-Directories
ADD_SUBDIRECTORY(Main)
ADD_SUBDIRECTORY(Core)
ADD_SUBDIRECTORY(UserInterface)
ADD_SUBDIRECTORY(luvk)